@@ -2,7 +2,7 @@
 	<menu>1</menu>
 	<second_menu>1</second_menu>
 	<meta></meta>
-	<charset>ISO-8859-15</charset>
+	<charset>UTF-8</charset>
 	<wysiwyg>tinymce</wysiwyg>
 	<lang>english_EN</lang>
 	<front_lang>germany_DE</front_lang>
