@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2712</build>
+	<build>Build 2713</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>24.03.2007 - 16:38</release_date>
+	<release_date>25.03.2007 - 13:54</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
